stop horizontal scroll

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -18,6 +18,7 @@
 }
 
 html {
+  overflow-x: hidden;
   font-size: 16px;
   // height: 100%;
   // min-height: 100vh;
