--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -20,7 +20,7 @@
   position: absolute;
   top: -40%;
   z-index: 5;
-  left: -200px;
+  left: -6%;
 
   .hero-title {
     font-family: "outward";
@@ -54,7 +54,7 @@
 
 .hero-img-topic {
   filter: saturate(0) brightness(0.5);
-  min-width: 100%;
+  min-width: 1;
 }
 
 @media (max-width: 767px) {
