--- a/src/scss/modules/_mobile-blocker.scss
+++ b/src/scss/modules/_mobile-blocker.scss
@@ -35,7 +35,7 @@
   margin: 20px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .mobile-blocker {
     display: flex;
   }
