--- a/src/scss/modules/_project.scss
+++ b/src/scss/modules/_project.scss
@@ -45,9 +45,10 @@
   width: 100%;
   max-width: 60vw;
   margin-bottom: 0px;
+  margin: auto;
   .project-titles {
     position: absolute;
-    left: -80px;
+    left: -5%;
     z-index: 5;
     h2 {
       font-size: 30px;
@@ -58,8 +59,8 @@
   }
   .project-text {
     position: absolute;
-    max-width: 40%;
-    right: -35%;
+    max-width: 35%;
+    right: -30%;
     z-index: 5;
   }
 }
